--- a/workflow-templates/codeql-analysis-template.yml
+++ b/workflow-templates/codeql-analysis-template.yml
@@ -3,7 +3,7 @@ name: "Template - Static Code Analysis (CodeQL)"
 on:
   push:
     branches:
-      - master
+      - workflow_templates
   schedule:
     - cron: '0 0 * * 0'
 
