--- a/workflow-templates/codeql-analysis-template.yml
+++ b/workflow-templates/codeql-analysis-template.yml
@@ -35,7 +35,7 @@ jobs:
       uses: github/codeql-action/init@v1
       with:
         languages: java
-        config-file: ./.github/codeql-config.yml
+        config-file: eeveebank/.github/workflow-templates/codeql-config.yml
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
