--- a/workflow-templates/codeql-analysis-template.yml
+++ b/workflow-templates/codeql-analysis-template.yml
@@ -3,7 +3,7 @@ name: "Template - Static Code Analysis (CodeQL)"
 on:
   push:
     branches:
-      - workflow_templates
+      - master
   schedule:
     - cron: '0 0 * * 0'
 
@@ -35,7 +35,7 @@ jobs:
       uses: github/codeql-action/init@v1
       with:
         languages: java
-        config-file: eeveebank/.github/workflow-templates/codeql-config.yml
+        config-file: eeveebank/.github/workflow-templates/codeql-config.yml@master
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
